--- a/src/views/layouts/admin/admin_layouts.ejs
+++ b/src/views/layouts/admin/admin_layouts.ejs
@@ -11,6 +11,8 @@
       href="/assets/images/apple-icon.png"
     />
     <title>Duta Grafika</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/satoshi.css">
   </head>
   <body
     x-data="{ page: 'ecommerce', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
@@ -37,6 +39,14 @@
         
         </div>
       </div>
+
+      <script src="/assets/js/index.js"></script>
+      <script src="/assets/js/us-aea-end.js"></script>
+      <script src="/assets/js/components/chart-01.js"></script>
+      <script src="/assets/js/components/chart-02.js"></script>
+      <script src="/assets/js/components/chart-03.js"></script>
+      <script src="/assets/js/components/chart-04.js"></script>
+      <script src="/assets/js/components/map-01.js"></script>
 
   </body>
 </html>
