--- a/src/views/layouts/admin/admin_layouts.ejs
+++ b/src/views/layouts/admin/admin_layouts.ejs
@@ -13,16 +13,13 @@
     <title>Duta Grafika</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/satoshi.css">
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
   </head>
   <body
-    x-data="{ page: 'ecommerce', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
-    x-init="
-         darkMode = JSON.parse(localStorage.getItem('darkMode'));
-         $watch('darkMode', value => localStorage.setItem('darkMode', JSON.stringify(value)))"
-    :class="{'dark text-bodydark bg-boxdark-2': darkMode === true}"
+   class="bg-green-800"
   >
       <!-- Loader -->
-      <%- include('loader') %>
+      <!-- <%- include('loader') %> -->
 
       <div class="flex h-screen overflow-hidden">
         <!-- Sidebar -->
@@ -40,6 +37,7 @@
         </div>
       </div>
 
+      <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
       <script src="/assets/js/index.js"></script>
       <script src="/assets/js/us-aea-end.js"></script>
       <script src="/assets/js/components/chart-01.js"></script>
