--- a/src/views/admin/operasional/add.ejs
+++ b/src/views/admin/operasional/add.ejs
@@ -5,63 +5,63 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Operasional</h2>
-    <form>
+    <form action="/operasional" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="idPegawai" class="col-span-1">Id Operasional :</label>
+        <label for="kode" class="col-span-1">Id Operasional :</label>
         <input
           type="text"
-          id="idPegawai"
-          name="idPegawai"
+          id="kode"
+          name="kode"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="namaPegawai" class="col-span-1">Nama Operasional :</label>
+        <label for="nama_oper" class="col-span-1">Nama Operasional :</label>
         <input
           type="text"
-          id="namaPegawai"
-          name="namaPegawai"
+          id="nama_oper"
+          name="nama_oper"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="teleponPegawai" class="col-span-1">Tgl Transaksi :</label>
+        <label for="tgl_transaksi" class="col-span-1">Tgl Transaksi :</label>
         <input
           type="text"
-          id="teleponPegawai"
-          name="teleponPegawai"
+          id="tgl_transaksi"
+          name="tgl_transaksi"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="alamatPegawai" class="col-span-1">Jummlah Debet :</label>
+        <label for="debet" class="col-span-1">Jummlah Debet :</label>
         <input
           type="text"
-          id="alamatPegawai"
-          name="alamatPegawai"
+          id="debet"
+          name="debet"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="alamatPegawai" class="col-span-1">Harga Kredit :</label>
+        <label for="kredit" class="col-span-1">Harga Kredit :</label>
         <input
           type="text"
-          id="alamatPegawai"
-          name="alamatPegawai"
+          id="kredit"
+          name="kredit"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="alamatPegawai" class="col-span-1">Pegawai :</label>
+        <label for="nama_pegawai" class="col-span-1">nama pegawai :</label>
         <input
           type="text"
-          id="alamatPegawai"
-          name="alamatPegawai"
+          id="nama_pegawai"
+          name="nama_pegawai"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
