--- a/src/views/admin/barang/edit.ejs
+++ b/src/views/admin/barang/edit.ejs
@@ -4,10 +4,13 @@
     id="formTambahData"
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
-    <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Orderan</h2>
-    <form action="/order/<%= data.orderan_id %>" method="post">
+    <h2 class="text-lg font-semibold mb-6 text-center">Edit Data Customer</h2>
+    <form action="/barang/<%= data.barang_id %>" method="post">
+        <div>
+            <input type="hidden" name="barang_id" value="<%= data.barang_id %>">
+        </div>
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="kode" class="col-span-1">Id Orderan :</label>
+        <label for="kode" class="col-span-1">Id Customer :</label>
         <input
           type="text"
           id="kode"
@@ -18,61 +21,50 @@
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="tgl_terima" class="col-span-1">tanggal Terima :</label>
+        <label for="nama_barang" class="col-span-1">Nama Barang :</label>
         <input
           type="text"
-          id="tgl_terima"
-          value="<%= data.tgl_terima %>"
-          name="tgl_terima"
+          id="nama_barang"
+          value="<%= data.nama_barang %>"
+          name="nama_barang"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="tgl_ambil" class="col-span-1">Tanggal ambil :</label>
+        <label for="Stok" class="col-span-1">Stok :</label>
         <input
           type="text"
-          id="tgl_ambil"
-          value="<%= data.tgl_ambil %>"
-          name="tgl_ambil"
+          id="stok"
+          value="<%= data.stok %>"
+          name="stok"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="nama_pesanan" class="col-span-1">Nama Pesanan :</label>
+        <label for="harga_beli" class="col-span-1">Harga Beli :</label>
         <input
           type="text"
-          id="nama_pesanan"
-          value="<%= data.nama_pesanan %>"
-          name="nama_pesanan"
+          id="harga_beli"
+          value="<%= data.harga_beli %>"
+          name="harga_beli"
+          class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
+        />
+      </div>
+      <div class="grid grid-cols-3 gap-4 mb-4">
+        <label for="harga_jual" class="col-span-1">Harga Jual :</label>
+        <input
+          type="text"
+          id="harga_jual"
+          value="<%= data.harga_jual %>"
+          name="harga_jual"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="qty" class="col-span-1">Qty :</label>
-        <input
-          type="text"
-          id="qty"
-          value="<%= data.qty %>"
-          name="qty"
-          class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
-        />
-      </div>
-
-      <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="jenis_pesanan" class="col-span-1">jenis_pesanan :</label>
-        <input
-          type="text"
-          id="jenis_pesanan"
-          value="<%= data.jenis_pesanan %>"
-          name="jenis_pesanan"
-          class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
-        />
-      </div>
-      <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="keterangan" class="col-span-1">keterangan :</label>
+        <label for="keterangan" class="col-span-1">Keterangan :</label>
         <input
           type="text"
           id="keterangan"
@@ -82,13 +74,14 @@
         />
       </div>
 
+
       <!-- Tombol Aksi -->
       <div class="flex justify-between mt-6">
         <a
           type="button"
           id="batalBtn"
           class="bg-white text-black px-6 py-2 rounded-full"
-          href="/order"
+          href="/barang"
         >
           Batal
         </a>
