--- a/src/views/admin/barang/index.ejs
+++ b/src/views/admin/barang/index.ejs
@@ -8,12 +8,12 @@
             </div>
   <!-- Tombol Aksi -->
   <div class="flex justify-between items-center mb-4 rounded-full">
-    <button class="bg-white text-black px-4 py-2 rounded-full flex items-center">
+    <a href="/barang/add" class="bg-white text-black px-4 py-2 rounded-full flex items-center">
       <span>Tambah Data</span>
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
       </svg>
-    </button>
+    </a>
 
     <div class="flex items-center space-x-2">
       <!-- Search bar -->
@@ -41,8 +41,6 @@
     </thead>
     <tbody>
         <% if(allBarang.length > 0) { %> <% allBarang.forEach((b, index) => { %>
-            
-        
       <tr class="">
         <td class="py-4 px-6"><%= b.kode %></td>
         <td class="py-4 px-6"><%= b.nama_barang %></td>
@@ -51,7 +49,7 @@
         <td class="py-4 px-6"><%= b.harga_jual %></td>
         <td class="py-4 px-6"><%= b.keterangan %></td>
         <td class="py-4 px-6">
-        <a href="" class="btn bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2">Ubah Data</a>
+        <a href="/barang/edit/<%= b.barang_id %>" class="btn bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2">Ubah Data</a>
         </td>
       </tr>
       <% }) %>
