--- a/src/views/admin/supplier/index.ejs
+++ b/src/views/admin/supplier/index.ejs
@@ -66,34 +66,23 @@
       </tr>
     </thead>
     <tbody>
+     <% if(allSupplier.length > 0) { %> <% allSupplier.forEach((s, index) => { %>
       <tr class="">
-        <td class="py-4 px-6">SP 1</td>
-        <td class="py-4 px-6">Narendra Hidayat</td>
-        <td class="py-4 px-6">6282374827387</td>
-        <td class="py-4 px-6">Jl. Kenangan raya, No 9</td>
-        <td class="py-4 px-6">Aktif</td>
+        <td class="py-4 px-6"><%= s.kode %></td>
+        <td class="py-4 px-6"><%= s.nama %></td>
+        <td class="py-4 px-6"><%= s.telepon %></td>
+        <td class="py-4 px-6"><%= s.alamat %></td>
+        <td class="py-4 px-6"><%= s.is_aktif %></td>
         <td class="py-4 px-6">
-          <a
-            href="/supplier/edit"
-            class="btn bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2"
-            >Ubah Data</a
-          >
+        <a href="/supplier/edit/<%= s.supplier_id %>" class="btn bg-yellow-500 hover:bg-yellow-600 text-white font-semibold rounded-md px-4 py-2">Ubah Data</a>
         </td>
       </tr>
-      <tr class="">
-        <td class="py-4 px-6">PG 2</td>
-        <td class="py-4 px-6">Narendra Hidayat</td>
-        <td class="py-4 px-6">6282374827387</td>
-        <td class="py-4 px-6">Jl. Mawar raya, No 9</td>
-        <td class="py-4 px-6">Aktif</td>
-      </tr>
-      <tr class="">
-        <td class="py-4 px-6">PG 3</td>
-        <td class="py-4 px-6">Narendra Hidayat</td>
-        <td class="py-4 px-6">6282374827387</td>
-        <td class="py-4 px-6">Jl. Kebun raya, No 9</td>
-        <td class="py-4 px-6">Aktif</td>
-      </tr>
+      <% }) %>
+      <% } else { %>
+        <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap justify-center" colspan="7">
+            <div class="text-center font-medium justify-center">Data tidak ada!</div>
+        </td>
+        <% } %>
     </tbody>
   </table>
 </div>
