--- a/src/views/admin/transaksi/edit.ejs
+++ b/src/views/admin/transaksi/edit.ejs
@@ -4,67 +4,73 @@
     id="formTambahData"
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
-    <h2 class="text-lg font-semibold mb-6 text-center">Ubah Data Transaksi</h2>
-    <form>
+    <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Transaksi</h2>
+    <form action="/transaksi/<%= data.transaksi_id %>" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="idPegawai" class="col-span-1">Id Pembeli :</label>
+        <label for="kode" class="col-span-1">Id Pembeli :</label>
         <input
           type="text"
-          id="idPegawai"
-          name="idPegawai"
+          id="kode"
+          value="<%= data.kode %>"
+          name="kode"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="namaPegawai" class="col-span-1">Nama Barang :</label>
+        <label for="nama_barang" class="col-span-1">Nama Barang :</label>
         <input
           type="text"
-          id="namaPegawai"
-          name="namaPegawai"
+          id="nama_barang"
+           value="<%= data.nama_barang %>"
+          name="nama_barang"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="teleponPegawai" class="col-span-1">Tgl Pembeli :</label>
+        <label for="tgl_pembelian" class="col-span-1">Tgl Pembeli :</label>
         <input
           type="text"
-          id="teleponPegawai"
-          name="teleponPegawai"
+          id="tgl_pembelian"
+           value="<%= data.tgl_pembelian %>"
+          name="tgl_pembelian"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="alamatPegawai" class="col-span-1">Total Order :</label>
+        <label for="total_order" class="col-span-1">Total Order :</label>
         <input
           type="text"
-          id="alamatPegawai"
-          name="alamatPegawai"
+          id="total_order"
+           value="<%= data.total_order %>"
+          name="total_order"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="alamatPegawai" class="col-span-1">Harga Barang :</label>
+        <label for="harga_barang" class="col-span-1">Harga Barang :</label>
         <input
           type="text"
-          id="alamatPegawai"
-          name="alamatPegawai"
+          id="harga_barang"
+           value="<%= data.harga_barang %>"
+          name="harga_barang"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         />
       </div>
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-        <label for="statusPegawai" class="col-span-1">Status :</label>
+        <label for="is_aktif" class="col-span-1">Status :</label>
         <select
-          id="statusPegawai"
-          name="statusPegawai"
+          id="is_aktif"
+           value="<%= data.is_aktif %>"
+          name="is_aktif"
           class="col-span-2 bg-teal-500 px-4 py-2 rounded-md text-black focus:outline-none"
         >
-          <option>Aktif</option>
-          <option>Nonaktif</option>
+          <option value="true">Aktif</option>
+          <option value="false">Nonaktif</option>
         </select>
       </div>
 
