--- a/src/views/admin/order/edit.ejs
+++ b/src/views/admin/order/edit.ejs
@@ -5,7 +5,7 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Orderan</h2>
-    <form action="/order/<%= data.orderan_id %>" method="post">
+    <form id="formUbahorder" action="/order/<%= data.orderan_id %>" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="kode" class="col-span-1">Id Orderan :</label>
         <input
@@ -102,3 +102,25 @@
     </form>
   </div>
 </div>
+
+<script>
+  document.getElementById('formUbahorder').addEventListener('submit', function(event) {
+    event.preventDefault(); // Mencegah form langsung submit
+
+    Swal.fire({
+      title: 'Konfirmasi',
+      text: "Apakah kamu yakin ingin mengubah data order ini?",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonText: 'Ya, ubah!',
+      cancelButtonText: 'Batal',
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        // Jika dikonfirmasi, lanjutkan submit form
+        this.submit();
+      }
+    });
+  });
+</script>
