--- a/src/views/admin/barang/edit.ejs
+++ b/src/views/admin/barang/edit.ejs
@@ -5,7 +5,7 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Edit Data Customer</h2>
-    <form action="/barang/<%= data.barang_id %>" method="post">
+    <form id="formUbahBarang" action="/barang/<%= data.barang_id %>" method="post">
         <div>
             <input type="hidden" name="barang_id" value="<%= data.barang_id %>">
         </div>
@@ -95,3 +95,25 @@
     </form>
   </div>
 </div>
+
+<script>
+  document.getElementById('formUbahBarang').addEventListener('submit', function(event) {
+    event.preventDefault(); // Mencegah form langsung submit
+
+    Swal.fire({
+      title: 'Konfirmasi',
+      text: "Apakah kamu yakin ingin mengubah data barang ini?",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonText: 'Ya, ubah!',
+      cancelButtonText: 'Batal',
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        // Jika dikonfirmasi, lanjutkan submit form
+        this.submit();
+      }
+    });
+  });
+</script>
