--- a/src/views/admin/customer/add.ejs
+++ b/src/views/admin/customer/add.ejs
@@ -5,7 +5,7 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Customer</h2>
-    <form action="/customer" method="post">
+    <form id="formTambahCustomer" action="/customer" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="kode" class="col-span-1">Id Customer :</label>
         <input
@@ -78,3 +78,25 @@
     </form>
   </div>
 </div>
+
+<script>
+  document.getElementById('formTambahCustomer').addEventListener('submit', function(event) {
+    event.preventDefault(); // Mencegah form langsung submit
+
+    Swal.fire({
+      title: 'Konfirmasi',
+      text: "Apakah kamu yakin ingin menambahkan customer ini?",
+      icon: 'question',
+      showCancelButton: true,
+      confirmButtonText: 'Ya, tambahkan!',
+      cancelButtonText: 'Batal',
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        // Jika dikonfirmasi, lanjutkan submit form
+        this.submit();
+      }
+    });
+  });
+</script>
