--- a/src/views/admin/pegawai/edit.ejs
+++ b/src/views/admin/pegawai/edit.ejs
@@ -5,7 +5,7 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Edit Data Pegawai</h2>
-    <form action="/pegawai/<%= data.pegawai_id %>" method="post">
+    <form id="formUbahpegawai" action="/pegawai/<%= data.pegawai_id %>" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="kode" class="col-span-1">Id Pegawai :</label>
         <input
@@ -65,13 +65,14 @@
 
       <!-- Tombol Aksi -->
       <div class="flex justify-between mt-6">
-        <button
+        <a
+        href="/pegawai"
           type="button"
           id="batalBtn"
           class="bg-white text-black px-6 py-2 rounded-full"
         >
           Batal
-        </button>
+        </a>
         <button
           type="submit"
           class="bg-black text-black-600 px-6 py-2 rounded-full"
@@ -82,3 +83,25 @@
     </form>
   </div>
 </div>
+
+<script>
+  document.getElementById('formUbahpegawai').addEventListener('submit', function(event) {
+    event.preventDefault(); // Mencegah form langsung submit
+
+    Swal.fire({
+      title: 'Konfirmasi',
+      text: "Apakah kamu yakin ingin mengubah data pegawai ini?",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonText: 'Ya, ubah!',
+      cancelButtonText: 'Batal',
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        // Jika dikonfirmasi, lanjutkan submit form
+        this.submit();
+      }
+    });
+  });
+</script>
