--- a/src/views/admin/supplier/add.ejs
+++ b/src/views/admin/supplier/add.ejs
@@ -5,7 +5,7 @@
     class="bg-teal-600 p-6 rounded-lg shadow-lg max-w mx-auto text-white"
   >
     <h2 class="text-lg font-semibold mb-6 text-center">Tambah Data Supplier</h2>
-    <form action="/supplier" method="post">
+    <form id="formTambahsupplier" action="/supplier" method="post">
       <div class="grid grid-cols-3 gap-4 mb-4">
         <label for="kode" class="col-span-1">Id supplier :</label>
         <input
@@ -67,7 +67,7 @@
           class="bg-white text-black px-6 py-2 rounded-full"
         >
           Batal
-      </a>
+        </a>
         <button
           type="submit"
           class="bg-black text-black-600 px-6 py-2 rounded-full"
@@ -78,3 +78,27 @@
     </form>
   </div>
 </div>
+
+<script>
+  document
+    .getElementById("formTambahsupplier")
+    .addEventListener("submit", function (event) {
+      event.preventDefault(); // Mencegah form langsung submit
+
+      Swal.fire({
+        title: "Konfirmasi",
+        text: "Apakah kamu yakin ingin menambahkan supplier ini?",
+        icon: "question",
+        showCancelButton: true,
+        confirmButtonText: "Ya, tambahkan!",
+        cancelButtonText: "Batal",
+        confirmButtonColor: "#3085d6",
+        cancelButtonColor: "#d33",
+      }).then((result) => {
+        if (result.isConfirmed) {
+          // Jika dikonfirmasi, lanjutkan submit form
+          this.submit();
+        }
+      });
+    });
+</script>
