--- a/src/views/layouts/admin/admin_layouts.ejs
+++ b/src/views/layouts/admin/admin_layouts.ejs
@@ -37,6 +37,7 @@
         </div>
       </div>
 
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
       <script src="/assets/js/index.js"></script>
       <script src="/assets/js/us-aea-end.js"></script>
